--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Natiz88.github.io/E-commerce-website",
+  "homepage": "https://Natiz88.github.io/",
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
